--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-* linguist-vendored
-*.py linguist-vendored=false
-*.js linguist-vendored=false
+*.py linguist-detectable=true
+*.js linguist-detectable=true
+*.css linguist-detectable=false
